# kiran-qt5-integration

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.en.md  README.md  cmake-macros.h.in
cmake/: FindKQI.cmake  FindQt5ThemeSupport.cmake  kqi-variables.cmake
cmake/modules/: FindQt5ThemeSupport.cmake  Qt5PluginInstallDirs.cmake
common/: CMakeLists.txt
common/data/: com.kylinsec.Kiran.SessionDaemon.Display.xml  kiran-qt5-integration.ini
common/src/: kiran-appearance-monitor.cpp  kiran-appearance-monitor.h  kiran-integration-settings.cpp  kiran-integration-settings.h  logging-category.cpp  logging-category.h
data/: CMakeLists.txt  com.kylinsec.Kiran.SessionDaemon.Appearance.xml  com.kylinsec.Kiran.SessionDaemon.Display.xml  kiran-integration-theme.pc.in  kiran-qt5-integration.ini
examples/: CMakeLists.txt  colors-card.cpp  colors-card.h  colors-card.ui  main.cpp  widget-factory.cpp  widget-factory.h  widget-factory.ui
include/: declarations.h
integration-test/: CMakeLists.txt
integration-test/src/: main.cpp  qt-widget-factor.cpp  qt-widget-factor.h
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  configuration.cpp  configuration.h
lib/theme/: CMakeLists.txt  define.h  font-size-manager-private.h  font-size-manager.cpp  font-size-manager.h  metrics.h  palette-private.h  palette.cpp  palette.h  render-helper.cpp  render-helper.h  style-helper.cpp  style-helper.h  style-private.h  style.cpp  style.h
platformtheme/: CMakeLists.txt  kiran-theme-plugin.cpp  kiran-theme-plugin.h  kiran-theme.cpp  kiran-theme.h  logging-category.cpp  logging-category.h
plugins/: CMakeLists.txt
plugins/platformtheme/: CMakeLists.txt  appearance-monitor.cpp  appearance-monitor.h  plugin.cpp  plugin.h  plugin.json  theme.cpp  theme.h  themed-icon-engine.cpp  themed-icon-engine.h
plugins/style/: CMakeLists.txt  plugin.cpp  plugin.h  plugin.json
resources/: style.qrc.in
style/: CMakeLists.txt  kiran-style-plugin.json
style-helper/: CMakeLists.txt  build-qt-theme.sh  extract_color_from_scheme.py  kiran-style-helper.pc.in  kiranstyle-helper.qrc.in
style-helper/data/: _colors-public.scss  _functions.scss  qt5.scss
style-helper/data/color-scheme/: base.colors  dark.colors  light.colors
style-helper/include/: font-size-manager.h  kiran-palette-define.h  kiran-palette.h  kiran-style-global.h  kiran-style-property.h  scheme-loader.h  style-global-define.h  style-palette.h  style-property.h
style-helper/src/: font-size-manager-private.h  font-size-manager.cpp  kiran-palette-private.cpp  kiran-palette-private.h  kiran-palette.cpp  kiran-style-property.cpp  scheme-loader-private.h  scheme-loader.cpp  scheme-loader.h  style-palette-private.cpp  style-palette-private.h  style-palette.cpp  style-property.cpp
style/src/: define.h  kiran-style-plugin.cpp  kiran-style-plugin.h  metrics.h  render-helper.cpp  render-helper.h  scheme-loader-fetcher.cpp  scheme-loader-fetcher.h  style.cpp  style.h
style/src/draw-helper/: draw-button-helper.cpp  draw-button-helper.h  draw-combo-box-helper.cpp  draw-combo-box-helper.h  draw-common-helper.cpp  draw-common-helper.h  draw-edit-helper.cpp  draw-edit-helper.h  draw-group-box-helper.cpp  draw-group-box-helper.h  draw-indicator-helper.cpp  draw-indicator-helper.h  draw-item-view-helper.cpp  draw-item-view-helper.h  draw-menu-helper.cpp  draw-menu-helper.h  draw-progress-bar-helper.cpp  draw-progress-bar-helper.h  draw-scroll-bar-helper.cpp  draw-scroll-bar-helper.h  draw-slider-helper.cpp  draw-slider-helper.h  draw-spin-box-helper.cpp  draw-spin-box-helper.h  draw-tab-widget-helper.cpp  draw-tab-widget-helper.h
style/test/: CMakeLists.txt  main.cpp  qt-widget-factor.cpp  qt-widget-factor.h
test/: CMakeLists.txt
test/src/: qt-widget-factor.cpp  qt-widget-factor.ui
